edit footer partial

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small pt-5">
+<footer class="page-footer font-small pt-5 fixed-bottom">
   <div class="container">
     <hr>
     <div class="row justify-content-center">
