view Index + _card, changement sur seed

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Items#index</h1>
-<p>Find me in app/views/items/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/minty/bootstrap.min.css">
+  <title>Pixtore</title>
+</head>
+
+<body>
+  <div class="jumbotron">
+    <h1 class="display-2 mt-4 text-center">Bienvenue sur PIXTORE !</h1>
+    </p>
+  </div>
+  
+  <div class="container">
+  <h3 class="display-4 mb-4 text-center">Voici le contenu de notre catalogue :</h3>
+    <div class="row">
+      <% @items.each do |item| %>
+        <%= render partial: "card", locals: { resource: item }%>    
+      <% end %>
+    </div>
+  </div>
+</body>
+</html>
