--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
 
      <!-- Bootswatch CSS CDN - Menty Theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/minty/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/5179dfb87c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    
+    <%= render 'layouts/header' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
     <!-- JavaScript -->
