--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,12 @@
   </head>
 
   <body>
-    
-    <%= yield %>
-    <%= render 'footer' %>
+    <div id="page-container">
+      <div id="content-wrap">
+        <%= yield %>
+      </div>
+      <%= render 'layouts/footer' %>
+    </div>
     <!-- JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
