--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,1 +1,39 @@
-<%= render "edit_user_form" %>
+<div class="container-fluid text-center mt-4 col-4">
+  <%= link_to "kitten pixtore.", root_path, class: "navbar-brand mt-4 ml-3 font-weight-bold" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <h2 class="mt-3">Modifier votre profil</h2>
+  <hr>
+  <form class="md-5">
+    <fieldset>
+      <div class="form-group mt-3">
+        <div class="mr-5 ml-5">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Adresse email", class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group mt-4">
+        <div class="mr-5 ml-5">
+          <%= f.password_field :password, autocomplete: "new-password", placeholder:"Nouveau mot de passe", class: "form-control" %>
+        </div>
+        <small id="emailHelp" class="form-text text-muted"><i class="fas fa-info-circle mr-1"></i>Le nombre de caractères de votre mot de passe doit être supérieur à 6. Laissez blanc si vous ne souhaitez pas changer.</small>
+      </div>
+      <div class="form-group">
+        <div class="mr-5 ml-5">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirmation du nouveau mot de passe", class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group mt-4">
+        <div class="mr-5 ml-5">
+          <%= f.password_field :current_password, autocomplete: "current-password", placeholder:"Mot de passe actuel", class: "form-control" %>
+        </div>
+        <small id="emailHelp" class="form-text text-muted"><i class="fas fa-info-circle mr-1"></i>Veuillez rentrer votre mot de passe actuel afin de confirmer l'opération.</small>
+      </div>
+      <%= f.submit "Modifier", class: "btn btn-success mt-3 md-3 font-weight-bold" %>
+    </fieldset>
+  </form>
+  <% end %>
+  <div class="separator mt-4 ">Vous souhaitez supprimer votre compte ?</div>
+  <%= link_to "Supprimer", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger mt-4 md-5 font-weight-bold" %><br>
+  <div class="mt-3">
+    <%= link_to "Revenir à l'acceuil", :back, class: "mt-3" %>
+  </div>
+</div>
