--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -3,7 +3,7 @@
     <div class="card-img"><img src= <%= resource.image_url %> style="height: 200px; width: 100%; display: block;"></div>
       <div class="card-body">
         <h4 class="card-title"><%= resource.title %></h4>
-        <p class="card-text mb-1"><%= resource.description %></p>
+        <p class="card-text mb-1">Prix : <%= resource.price %>€</p>
         <div class="btn-group mt-3" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-info btn-sm">+ d'infos</button>
         </div>
