--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
   <h3 class="display-4 mb-4 text-center">Voici le contenu de notre catalogue :</h3>
     <div class="row">
       <% @items.each do |item| %>
-        <%= render partial: "card", locals: { resource: item }%>    
+        <%= render partial: "card", locals: { item: item }%>    
       <% end %>
     </div>
   </div>
