--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -1,11 +1,12 @@
 <div class="col-4">
   <div class="card mb-5 mr-5" style="max-width: 20rem;">
-    <div class="card-img"><img src= <%= resource.image_url %> style="height: 200px; width: 100%; display: block;"></div>
+    <div class="card-img"><img src= <%= resource.image_url %> style="height: 250px; width: 100%; display: block;"></div>
       <div class="card-body">
         <h4 class="card-title"><%= resource.title %></h4>
         <p class="card-text mb-1">Prix : <%= resource.price %>€</p>
         <div class="btn-group mt-3" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-outline-info btn-sm">+ d'infos</button>
+        <!--Modif le javascript par le show_path-->
+          <%= link_to "+ d'infos", 'javascript:;', :class => "btn btn-outline-info btn-sm"%>
         </div>
       </div>
     </div>
