--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,9 +11,21 @@
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <% if user_signed_in? %>
-        <%= link_to('javascript:;', :class => "btn btn-primary my-2 my-sm-0 font-weight-bold") do %>
-          <u>Mon compte</u>
-        <% end %>
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">
+            Mon compte
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to('javascript:;', :class => "dropdown-item") do %>
+              Mes commandes
+            <% end %>
+            <%= link_to("Modifier mon profil", edit_user_registration_path, :class => "dropdown-item") %>
+            <%= link_to(destroy_user_session_path, :method => :delete, :class => "dropdown-item") do %>
+              <i class="fas fa-power-off mr-1"></i>
+              Se déconnecter
+            <% end %>
+          </div>
+        </div>
         <%= link_to('javascript:;', :class => "btn btn-warning font-weight-bold mr-2 ml-2") do %>
             <i class="fas fa-cart-plus mr-1"></i>
             Mon panier
