--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,10 +11,8 @@
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <% if user_signed_in? %>
-        <%= link_to('javascript:;', :class => "btn btn-primary my-2 my-sm-0 font-weight-bold") do %>
-          <u>Mon compte</u>
-        <% end %>
-        <%= link_to('javascript:;', :class => "btn btn-warning font-weight-bold mr-2 ml-2") do %>
+        <%= link_to "Mon compte", class: "btn btn-primary my-2 my-sm-0 font-weight-bold" %>
+        <%= link_to(cart_path(current_user.cart), :class => "btn btn-warning font-weight-bold mr-2 ml-2") do %>
             <i class="fas fa-cart-plus mr-1"></i>
             Mon panier
         <% end %>
@@ -22,7 +20,7 @@
         <%= link_to(new_user_registration_path, :class => "btn btn-primary my-2 my-sm-0 font-weight-bold") do %>
           <u>S'inscrire</u>
         <% end %>
-        <%= link_to("Se connecter", new_user_session_path, :class => "btn btn-secondary my-2 my-sm-0 ml-2 mr-2 font-weight-bold") %>
+        <%= link_to "Se connecter", new_user_session_path, class: "btn btn-secondary my-2 my-sm-0 ml-2 mr-2 font-weight-bold" %>
       <% end %>
     </div>
   </div>
