edit welcome_email patterns

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -11,6 +11,6 @@
     <p>
       Pour accéder à votre espace client, connectez-vous via : <%= @url %>.
     </p>
-    <p> À très vite sur Kitten-Pixtore !
+    <p>À très vite sur Kitten-Pixtore !</p>
   </body>
 </html>
