--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,8 +1,8 @@
-Salut <%= @user.name %> et bienvenue chez nous !
+Bonjour et bienvenue chez nous !
 ==========================================================
  
-Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+Vous venez de vous inscrire sur Kitten-Pixtore en utilisant l'adresse e-mail <%= @user.email %>.
  
-Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+Pour accéder à votre espace client, connectez-vous via : <%= @url %>.
  
-À très vite sur monsite.fr !
+À très vite sur Kitten-Pixtore !
