responsive index + show_items

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row mt-5 mb-5">
-    <div class="col">
+    <div class="col-lg-6 col-sm-8">
       <img src= <%= @item.image_url %> style="height: auto; width: 100%">
     </div>
-    <div class="col">
+    <div class="col-lg-6 col-sm-8">
       <h3 class="mt-3"><strong><%= @item.title %></h3></strong>
       <hr class="style1">
       <h5 class="mt-4"><strong>Prix :</strong> <div class="badge badge-light"><%= @item.price %> €</div></h5>
