--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,13 +2,13 @@
   <div class="container">
     <hr>
     <div class="row justify-content-center">
-      <div class="col-2">
+      <div class="col-lg-2 col-md-6 col-sm-6">
         <div class="navbar-brand">kitten pixtore.®</div>
         <div class="mr-5">
           <img src="https://i.pinimg.com/originals/05/20/45/0520457e048ab6d28a0a14cb7998658a.png" width="100" height="100">
         </div>
       </div>
-      <div class="col-3 mt-3">
+      <div class="col-lg-3 col-md-6 col-sm-6  mt-3">
         <h6 class="text-uppercase text-left">QUI SOMMES-NOUS</h6>
         <div class="text-left">
           <a href="#" class="footer-link">Nos valeurs</a><br>
@@ -17,7 +17,7 @@
           <a href="#" class="footer-link">Nos partenaires</a><br>
         </div>
       </div>
-      <div class="col-3 mt-3">
+      <div class="col-lg-3 col-md-6 col-sm-6  mt-3">
         <h6 class="text-uppercase text-left">MON KITTEN PIXTORE</h6>
         <div class="text-left">
           <a href="#" class="footer-link">Mon compte</a><br>
@@ -25,7 +25,7 @@
           <a href="#" class="footer-link">Mon panier</a><br>
         </div>
       </div>
-      <div class="col-3 mt-3">
+      <div class="col-lg-3 col-md-6 col-sm-6 mt-3">
         <h6 class="text-uppercase text-left">S'inscrire</h6>
         <form>
           <fieldset>
