--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="col-4 p-5">
+<div class="col-lg-4 col-sm-6 col-md-6 p-5">
   <div class="card">
     <div class="card-img"><%= link_to image_tag(item.image_url, height: "190px", width: "100%"), item_path(item) %></div>
     <div class="card-body">
