--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,16 @@
   <body>
     <div id="page-container">
       <%= render 'layouts/header' %>
+        <% if notice %>
+          <div class='alert alert-success p-2'>
+            <%= notice %>
+          </div>
+        <% end %>
+        <% if alert %>
+          <div class='alert alert-danger p-2'>
+            <%= alert %>
+          </div>
+        <% end %>
       <div id="content-wrap">
         <%= yield %>
       </div>
