--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,11 @@
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <% if user_signed_in? %>
-        <div class="nav-item dropdown">
+        <%= link_to(cart_path(current_user.cart), :class => "btn btn-warning font-weight-bold mr-2 ml-2") do %>
+            <i class="fas fa-cart-plus mr-1"></i>
+            Mon panier
+        <% end %>
+        <div class="nav-item dropdown mr-3">
           <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">
             Mon compte
           </a>
@@ -26,10 +30,6 @@
             <% end %>
           </div>
         </div>
-        <%= link_to(cart_path(current_user.cart), :class => "btn btn-warning font-weight-bold mr-2 ml-2") do %>
-            <i class="fas fa-cart-plus mr-1"></i>
-            Mon panier
-        <% end %>
       <% else %>
         <%= link_to(new_user_registration_path, :class => "btn btn-primary my-2 my-sm-0 font-weight-bold") do %>
           <u>S'inscrire</u>
