--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <%= link_to root_path, :class => "navbar-brand font-weight-bold" do %>
-    <%= image_tag("https://i.pinimg.com/originals/05/20/45/0520457e048ab6d28a0a14cb7998658a.png", width:"50", height:"50", class: "mr-3") %>
+    <%= image_tag("https://i.pinimg.com/originals/05/20/45/0520457e048ab6d28a0a14cb7998658a.png", width:"50", height:"50", class: "mr-3 ml-3") %>
     kitten pixtore.
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
