--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid text-center mt-4 mb-4 col-4">
   <%= link_to "kitten pixtore.", root_path, class: "navbar-brand mt-4 ml-3 font-weight-bold" %>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render partial: "layouts/error", locals: { resource: resource } %>
     <h2 class="mt-3">Vous avez oublié votre mot de passe ?</h2>
     <hr>
     <%= render "devise/shared/error_messages", resource: resource %>
