--- a/app/views/devise/registrations/_sign_up_form.html.erb
+++ b/app/views/devise/registrations/_sign_up_form.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid text-center mt-4 col-4">
   <%= link_to "kitten pixtore.", root_path, class: "navbar-brand mt-4 ml-3 font-weight-bold" %>
   <%= form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" } do |f| %>
+  <%= render partial: "layouts/error", locals: { resource: resource } %>
   <h2 class="mt-3">Inscrivez-vous</h2>
   <hr>
   <form class="md-5">
