--- a/app/views/layouts/_error.html.erb
+++ b/app/views/layouts/_error.html.erb
@@ -8,4 +8,8 @@
     <% end %>
     </ul>
   </div>
+<% elsif alert %>
+  <div class="alert alert-danger" role="alert" id="error_explanation">
+    <li><%= alert %></li>
+  </div>
 <% end %>
