--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,12 +16,16 @@
                   </thead>
                   <tbody>
                   <% @cart.items.each do |item| %> 
-                      <tr class="font-weight-light">
+                      <tr class="font-weight-light" id="item-<%= item.id %>">
                           <td style="width: 5%"><%= link_to image_tag(item.image_url, height: "40px", width: "50px", class: "rounded"), item_path(item) %></td>
                           <td style="width: 25%" class="align-middle"><%= link_to item.title, item_path(item), class: "text-muted" %></td>
                           <td style="width: 15%" class="align-middle"><%= item.price %> €</td>
                           <td style="width: 3%" class="align-middle"><input type="number" value="1" min="1" max="1000" step="1" class="form-control text-center"></td>
-                          <td class="text-right" class="align-middle"><%= link_to cart_path(item), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger mr-3" do %><i class="fa fa-trash align-middle"></i><% end %></td>
+                          <td class="text-right" class="align-middle">
+                            <%= link_to cart_path(item), method: :delete, class: "btn btn-sm btn-danger mr-3", remote: true do %>
+                              <i class="fa fa-trash align-middle"></i>
+                            <% end %>
+                          </td>
                       </tr>
                       <% end %>
                   </tbody>
@@ -31,7 +35,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12 col-sm-6 text-right">
-        <p class="mr-3">Total : <strong><%= @cart.total_price %> €</strong><p>
+        <p class="mr-3">Total : <strong id="total-order"><%= @cart.total_price %></strong><strong> €</strong><p>
       </div>
       <div class="col-lg-12 col-sm-6 mt-3">
         <%= link_to "Commander", 'javascript:;', class:"btn btn-success font-weight-bold float-right" %>
