--- a/app/views/devise/registrations/_sign_up_form.html.erb
+++ b/app/views/devise/registrations/_sign_up_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center mt-4 col-4">
+<div class="container-fluid text-center mt-4 col-lg-4 col-sm-6 col-md-6">
   <%= link_to "kitten pixtore.", root_path, class: "navbar-brand mt-4 ml-3 font-weight-bold" %>
   <%= form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin mt-3" } do |f| %>
   <%= render partial: "layouts/error", locals: { resource: resource } %>
