ajax on several views related to cart

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,7 @@
 
 <div class="container">
-  <h1 class="mb-5 mt-5 font-weight-bold"><i class="fas fa-cart-plus mr-1"></i> Mon panier</h1>
+  <div id="flash"></div>
+  <h1 class="mb-5 mt-5 font-weight-bold" id="my-cart-title"><i class="fas fa-cart-plus mr-1"></i> Mon panier</h1>
   <div class="row">
       <div class="col-lg-12 col-sm-5">
           <div class="table-responsive">
