--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,8 @@
   <h1 class="mt-4 text-center text-dark">Bienvenue sur <strong>Kitten Pixtore</strong></h1>
 </div>
 <div class="container mt-4">
-  <h3 class="text-center font-weight-bold mb-4">Notre catalogue</h3>
+  <div id="flash"></div>
+  <h3 class="text-center font-weight-bold mb-4 mt-4">Notre catalogue</h3>
   <hr>
   <div class="row">
     <% @items.each do |item| %>
