--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Orders#create</h1>
-<p>Find me in app/views/orders/create.html.erb</p>
+<div class="container mt-5">
+  <h2>Félicitations, votre commande a bien été enregistré. Vous avez payé <strong><%= @amount.to_f %> €</strong> !</h2>
+</div>
