--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -46,22 +46,18 @@
         <p><%= flash[:error] %></p>
       </div>
     <% end %>
-    <label class="amount">
-      <span>Amount: <%= @amount %></span>
-    </label>
   </article>
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="Finaliser la commande"
+          data-description="Total à payer : <%= @cart.total_price %> €"
           data-amount="<%= @amount %>"
           data-locale="auto"
           data-email="<%=current_user.email%>"
           data-currency="eur"
-          data-label="Finaliser la commander"
+          data-label="Finaliser la commande"
           data-locale="fr"></script>
 <% end %>
-        <%= link_to "Commander", orders_path, method: :post, class:"btn btn-success font-weight-bold float-right" %>
         <%= link_to "Continuer les achats", root_path, class: "btn btn-light mb-3 mr-3 float-right" %>
       </div>
   </div>
