edit view mailer

--- a/app/views/user_mailer/purchased_email.html.erb
+++ b/app/views/user_mailer/purchased_email.html.erb
@@ -7,7 +7,7 @@
     <div class="container">
       <% total = 0 %>
       <h1>Merci d'avoir passé votre commande chez Kitten Pixtore !</h1><br/>
-      <h3>Votre numéro de commande est le <%= @user.orders.ids.last %>
+      <h3>Votre numéro de commande est le <%= @order.id %>
       <% if @user.cart.items.length > 1 %>
         <h4>
           Voici les différents articles que vous avez achetés pour un total de : 
