--- a/app/views/user_mailer/sold_email.html.erb
+++ b/app/views/user_mailer/sold_email.html.erb
@@ -27,7 +27,7 @@
         Les informations de l'acheteur sont les suivantes :<br>
         <strong>Email : </strong><%= @user.email %><br>
         <strong>Profil crée le : </strong><%= @user.created_at %><br>
-        <strong>Commande numéro : </strong><%= @user.order.id %>
+        <strong>Commande numéro : </strong><%= order.id %>
       </p>
       <h4>A bientôt cher Administrateur !</h4>
     </div>
