--- a/app/views/user_mailer/sold_email.txt.erb
+++ b/app/views/user_mailer/sold_email.txt.erb
@@ -15,6 +15,6 @@ Bonjour cher Administrateur, une nouvelle commande vient d'être passée sur Kit
 Les informations de l'acheteur sont les suivantes :
 Email : <%= @user.email %>
 Profil créé le : <%= @user.created_at %>
-Commande numéro : <%= @user.order.id %>
+Commande numéro : <%= order.id %>
  
 A bientôt cher Administrateur !
