--- a/app/views/user_mailer/purchased_email.text.erb
+++ b/app/views/user_mailer/purchased_email.text.erb
@@ -1,15 +1,14 @@
 Merci d'avoir passé votre commande chez Kitten Pixtore !
 ==========================================================
 
-<% if @user.cart.items.length > 1 %>
-  <% total = 0 %>
-  <% @user.cart.items.each {|item| total = total + item.price } %>
-  Voici les différents articles que vous avez achetés pour un total de : <%= total.to_f %>
-<% else %>
-    Voici l'article que vous avez acheté pour un total de : <%= @user.cart.items[0].to_f %>
-<% end %>
-<% @user.cart.items.each do |item| %>
-  <% item.title %> : <% item.price.to_f %> €
+ 
+  Voici les différents articles que vous avez achetés pour un total de : <%= @order.user.cart.total_price %> €
+
+  Voici le détail de votre commande : <%= @user.cart.items[0].to_f %>
+
+<% @line_items.each do |line| %>
+  <div class="mb-2"><%= line.title %> : <%= line.price.to_f %></div>
+  <img src= <%= line.image_url %> class="mb-5">
 <% end %>
  
 Pour accéder à votre espace client, connectez-vous sur : <%= @url %>.
