--- a/app/views/user_mailer/purchased_email.html.erb
+++ b/app/views/user_mailer/purchased_email.html.erb
@@ -5,11 +5,9 @@
   </head>
   <body>
     <div class="container">
-      <% total = 0 %>
       <h1>Merci d'avoir passé votre commande chez Kitten Pixtore !</h1><br/>
-      <!--
       <h3>Votre numéro de commande est le <%= @order.id %>
-      <% if @user.cart.items.length > 1 %>
+      <% if @order.user.cart.items.length > 1 %>
         <h4>
           Voici les différents articles que vous avez achetés pour un total de :        
           <div class="btn btn-small btn-outline-info"><%= @order.user.cart.total_price %></div>
@@ -22,7 +20,6 @@
       <p>
         Pour accéder à votre espace client, connectez-vous sur : <%= @url %>.
       </p>
-      -->
       <h4>À très vite sur Kitten Pixtore !</h4>
     </div>
   </body>
