--- a/app/views/user_mailer/sold_email.txt.erb
+++ b/app/views/user_mailer/sold_email.txt.erb
@@ -1,6 +1,6 @@
 Bonjour cher Administrateur, une nouvelle commande vient d'être passée sur Kitten Pixtore !
 ==========================================================
-<!--
+
 Voici les différents articles qui viennent d'être achetés pour un total de : <%= @order.user.cart.total_price %>
 
 <% @line_items.each do |line| %>
@@ -8,8 +8,8 @@ Voici les différents articles qui viennent d'être achetés pour un total de : 
 <% end %>
  
 Les informations de l'acheteur sont les suivantes :
-Email : <%= @user.email %>
-Profil créé le : <%= @user.created_at %>
-Commande numéro : <%= order.id %>
--->
+Email : <%= @order.user.email %>
+Profil créé le : <%= @order.user.created_at %>
+Commande numéro : <%= @order.id %>
+
 A bientôt cher Administrateur !
