--- a/app/views/user_mailer/sold_email.txt.erb
+++ b/app/views/user_mailer/sold_email.txt.erb
@@ -4,7 +4,7 @@ Bonjour cher Administrateur, une nouvelle commande vient d'être passée sur Kit
 Voici les différents articles qui viennent d'être achetés pour un total de : <%= @order.user.cart.total_price %>
 
 <% @order.items.each do |line| %>
-  <%= line.title %> : <%= line.price.to_f %> €
+  <%= line.title %> : <%= line.price %> €
 <% end %>
  
 Les informations de l'acheteur sont les suivantes :
