--- a/app/views/user_mailer/purchased_email.text.erb
+++ b/app/views/user_mailer/purchased_email.text.erb
@@ -3,10 +3,10 @@ Merci d'avoir passé votre commande chez Kitten Pixtore !
 
 Voici les différents articles que vous avez achetés pour un total de : <%= @order.user.cart.total_price %> €
 
-Voici le détail de votre commande : <%= @order.user.cart.items[0].to_f %>
+Voici le détail de votre commande : 
 
 <% @order.items.each do |line| %>
-  <div class="mb-2"><%= line.title %> : <%= line.price.to_f %></div>
+  <div class="mb-2"><%= line.title %> : <%= line.price %></div>
   <img src= <%= line.image_url %> class="mb-5">
 <% end %>
  
