--- a/app/views/user_mailer/sold_email.html.erb
+++ b/app/views/user_mailer/sold_email.html.erb
@@ -11,7 +11,7 @@
         <div class="btn btn-small btn-outline-info"><%= @order.user.cart.total_price %></div>
       </h4>
       <% @order.items.each do |line| %>
-        <%= line.title %> : <%= line.price.to_f %> €
+        <%= line.title %> : <%= line.price %> €
       <% end %>
       <p>
         Les informations de l'acheteur sont les suivantes :<br>
