--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -39,7 +39,7 @@
                 <th scope="row"><%= order.id %></th>
                 <td><%= order.created_at %></td>
                 <td><%= order.items.length %></td>
-                <td><mark><%= order.price.to_f %></mark></td>
+                <td><mark><%= order.amount %> €</mark></td>
               </tr>
             <% end %>
           </tbody>
